force-app/main/default/objects/ALDX_WF_Status__mdt/ALDX_WF_Status__mdt.object-meta.xml
<CustomObject>
    <label>ALDX WF Status</label>
    <pluralLabel>ALDX WF Statuses</pluralLabel>
</CustomObject>