force-app/main/default/objects/ALDX_WF_Status__mdt/fields/STATUS_NAME__c.field-meta.xml
<CustomField>
    <fullName>STATUS_NAME__c</fullName>
    <label>STATUS NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>