force-app/main/default/objects/ALDX_WF_Status__mdt/fields/WARNING_MESSAGE__c.field-meta.xml
<CustomField>
    <fullName>WARNING_MESSAGE__c</fullName>
    <label>WARNING MESSAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>